// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ogf fix should leave a visual it already fixed alone 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Workers: <workers> (auto)",
    "Fixing ogf visual <sandbox>/meshes/residue.ogf",
    "Normalized 0 of 1 visual(s), 0 bytes discarded, 1 unchanged, 0 failed",
  ],
}
`;

exports[`ogf fix should name the discarded reference before writing 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Discarding uncounted motion reference 'actors\\stalker_scenario_animation' from <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Fixing ogf visual <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf",
    "Normalize <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf: 34 bytes the engine never reads",
    "Ogf visual written into <sandbox>/fixed.ogf",
    "Normalized 1 of 1 visual(s), 34 bytes discarded, 0 unchanged, 0 failed",
  ],
}
`;

exports[`ogf fix should read back the same references with no residue 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read ogf file <sandbox>/fixed.ogf",
    "Ogf file information",
    "Version: 4, model_type: 3, shader_id: 0, OgfBox { min: Vector3d { x: 0.0, y: 0.0, z: 0.0 }, max: Vector3d { x: 1.0, y: 1.0, z: 1.0 } } - OgfSphere { position: Vector3d { x: 0.0, y: 0.0, z: 0.0 }, radius: 1.0 }",
    "Boundaries box: OgfBox { min: Vector3d { x: 0.0, y: 0.0, z: 0.0 }, max: Vector3d { x: 1.0, y: 1.0, z: 1.0 } }",
    "Boundaries sphere: OgfSphere { position: Vector3d { x: 0.0, y: 0.0, z: 0.0 }, radius: 1.0 }",
    "Motion refs: ["actors\\\\stalker_animation", "actors\\\\stalker_scripts_animation", "actors\\\\zombied_animation", "actors\\\\stalker_smart_cover_animation", "omf\\\\wpn_mp5_hud_animation"]",
  ],
}
`;

exports[`ogf fix should report a dry run without writing 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Discarding uncounted motion reference 'actors\\stalker_scenario_animation' from <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Checking ogf visual <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf",
    "Normalize <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf: 34 bytes the engine never reads",
    "Dry run, nothing written, <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf would receive 210 bytes instead of 244",
    "Dry run, nothing written: 1 of 1 visual(s) would be normalized, 34 bytes discarded, 0 unchanged, 0 failed",
  ],
}
`;

exports[`ogf fix should report nothing left to discard 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "fix",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "checked": 1,
    "discardedSize": 0,
    "failed": 0,
    "files": [],
    "findings": [],
    "isDryRun": false,
    "normalized": 0,
    "unchanged": 1,
  },
}
`;

exports[`ogf fix should report the normalized visual 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "fix",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "checked": 1,
    "discardedSize": 34,
    "failed": 0,
    "files": [
      {
        "cause": "split-motion-ref",
        "destination": "<sandbox>/fixed.ogf",
        "discardedReference": "actors\\stalker_scenario_animation",
        "discardedSize": 34,
        "isWritten": true,
        "normalizedSize": 210,
        "originalSize": 244,
        "source": "<resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf",
      },
    ],
    "findings": [],
    "isDryRun": false,
    "normalized": 1,
    "unchanged": 0,
  },
}
`;

exports[`ogf fix should report the sweep beside its findings 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "fix",
  ],
  "duration": "<duration>",
  "error": "Verify error: Failed to fix 1 of 3 ogf visual(s)",
  "execution": {
    "origin": "requested",
    "workers": "<workers>",
  },
  "exitCode": 1,
  "outcome": "executionFailed",
  "result": {
    "checked": 3,
    "discardedSize": 34,
    "failed": 1,
    "files": [
      {
        "cause": "split-motion-ref",
        "destination": "<sandbox>/meshes/residue.ogf",
        "discardedReference": "actors\\stalker_scenario_animation",
        "discardedSize": 34,
        "isWritten": true,
        "normalizedSize": 210,
        "originalSize": 244,
        "source": "<sandbox>/meshes/residue.ogf",
      },
    ],
    "findings": [
      {
        "message": "Invalid error: Chunk 0x656b6c61 at position 227 declares 1668505458 bytes, 28 remain before source end 255",
        "source": "<sandbox>/meshes/unaccountable.ogf",
      },
    ],
    "isDryRun": false,
    "normalized": 1,
    "unchanged": 1,
  },
}
`;

exports[`ogf fix should report what a dry run would discard 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "fix",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "checked": 1,
    "discardedSize": 34,
    "failed": 0,
    "files": [
      {
        "cause": "split-motion-ref",
        "destination": "<resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf",
        "discardedReference": "actors\\stalker_scenario_animation",
        "discardedSize": 34,
        "isWritten": false,
        "normalizedSize": 210,
        "originalSize": 244,
        "source": "<resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf",
      },
    ],
    "findings": [],
    "isDryRun": true,
    "normalized": 1,
    "unchanged": 0,
  },
}
`;

exports[`ogf fix should sweep a directory and fail for what it refused 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Discarding uncounted motion reference 'actors\\stalker_scenario_animation' from <sandbox>/meshes/residue.ogf",
    "Failed to fix <sandbox>/meshes/unaccountable.ogf: Invalid error: Chunk 0x656b6c61 at position 227 declares 1668505458 bytes, 28 remain before source end 255",
    "Error: Verify error: Failed to fix 1 of 3 ogf visual(s)",
  ],
  "stdout": [
    "Workers: <workers> (requested)",
    "Fixing 3 ogf visuals in <sandbox>/meshes",
    "Normalize <sandbox>/meshes/residue.ogf: 34 bytes the engine never reads",
    "Ogf visual written into <sandbox>/meshes/residue.ogf",
    "Normalized 1 of 3 visual(s), 34 bytes discarded, 1 unchanged, 1 failed",
  ],
}
`;

exports[`ogf fix should write only the fixed visuals and reports 1`] = `
[
  {
    "path": "again.json",
    "sha256": "440770aaa2b2d8fea0c65d8802feb8b9de29c396841a868b7f740e0d37723ad6",
    "size": 679,
  },
  {
    "path": "dry-run.json",
    "sha256": "7b506035dbf908635cc33a076ddce656cea7d1368e68ac48ffb3da84e83e3ab4",
    "size": 1090,
  },
  {
    "path": "fixed.json",
    "sha256": "7c7a0083e53a72843bc0ff476f60ed3ae02bb414708d44a7bfd8f81d1c727a6c",
    "size": 1049,
  },
  {
    "path": "fixed.ogf",
    "sha256": "433033159f338d374cd6f3db373f26327432ef6b4db8accac92fb6bbab0b5fb0",
    "size": 210,
  },
  {
    "path": "meshes/nested/clean.ogf",
    "sha256": "2c41c8c88a51e20277009d457b479083e7b3719b959d1576d1e2e3208c2cd224",
    "size": 13867,
  },
  {
    "path": "meshes/residue.ogf",
    "sha256": "433033159f338d374cd6f3db373f26327432ef6b4db8accac92fb6bbab0b5fb0",
    "size": 210,
  },
  {
    "path": "meshes/unaccountable.ogf",
    "sha256": "446db474afb2e6a6dbe82a3f2c971dfd8b89dddd140ef6415b702503368f308f",
    "size": 255,
  },
  {
    "path": "tree.json",
    "sha256": "f8f5c0438c01e182e26c7eef15083506cd85604af04cc8418caeff7b6f18abb0",
    "size": 1290,
  },
]
`;
